fixed wrapping on intro text

--- a/src/Intro/Intro.css
+++ b/src/Intro/Intro.css
@@ -30,7 +30,7 @@
   padding-top: 100px;
   padding-left: 5% 0;
   text-align: left;
-  max-width: 30%;
+  max-width: 50%;
 }
 
 .long{
@@ -43,6 +43,7 @@
   margin-bottom: 0;
   font-weight: bold;
   align-self: left;
+  white-space: nowrap;
 }
 
 a:link, a:visited, a:hover, a:active {
